<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_motion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/scene_pet_detail">

    <!-- app:layoutDescription="@xml/scene_pet_detail" -->

    <ImageView
        android:id="@+id/details_header"
        android:layout_width="0dp"
        android:layout_height="@dimen/detail_header_height"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/detail_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/details_appbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/mock_header_image" />

    <View
        android:id="@+id/details_header_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/details_header"
        app:layout_constraintEnd_toEndOf="@id/details_header"
        app:layout_constraintStart_toStartOf="@id/details_header"
        app:layout_constraintTop_toTopOf="@id/details_header" />

    <View
        android:id="@+id/details_appbar_background"
        android:layout_width="0dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="@id/details_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_status_bar_anchor"
        app:navigationIcon="@drawable/ic_close_black_24dp_dark"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:contentDescription="@string/avatar_description"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_appbar_background"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/ownerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:text="JOHN DOE"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:text="240m"
        android:textAppearance="@style/TextAppearanceHeadline4"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:alpha="0"
        android:text="Dimmy"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:text="@string/mock_description"
                android:textAppearance="@style/TextAppearanceBody2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_semi_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/characteristicsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_semi_large"
                android:paddingEnd="@dimen/spacing_medium"
                android:text="@string/characteristics_title"
                android:textSize="30dp"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium">

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_dogs"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/background"
                    app:chipIconEnabled="false"
                    app:chipIconVisible="false"
                    app:chipStrokeColor="@color/colorPrimary"
                    app:chipStrokeWidth="@dimen/stroke_width_small"
                    app:closeIconEnabled="false"
                    app:rippleColor="@color/colorSecondary" />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"

                   />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yorkshire terrier"

                  />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sterilized"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/background"
                    />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2 years"

                     />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium sized"

                     />

                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good behavior"/>


                <Button
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Educated"

                     />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_semi_large"
                android:paddingEnd="@dimen/spacing_medium"
                android:text="Lives in"
                android:textSize="30dp"/>
            <Button
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="Karawaci"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/background"/>


            <Button
                android:id="@+id/talkToOwnerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_semi_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/talk_to_owner_cta" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:background="@color/divider" />

            <Button
                android:id="@+id/AdoptNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_semi_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large"
                android:backgroundTint="@color/colorPrimaryDark"
                android:insetTop="3dp"
                android:insetBottom="6dp"
                android:text="@string/adopt_now"
                app:icon="@drawable/ic_dog" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- This needs to be updated to use WindowInsets. See https://issuetracker.google.com/issues/112605433 -->
    <View
        android:id="@+id/details_status_bar_anchor"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@drawable/status_bar_translucent_scrim" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ROYCE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/details_rv"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_appbar_background"
        app:layout_constraintVertical_bias="0.906" />

</androidx.constraintlayout.motion.widget.MotionLayout>
